# mser3D

./: README.md  Settings.yaml  nister_ellipses.txt  tracking_pipeline.py  vlfeat_ellipses.txt
PyBioSim-master/: Agent.py  AlexBrain.py  Ball.py  Obstacle.py  RandomBrain.py  RunAtBallBrain.py  Simulator.py
clearmetrics-master/: clearmetrics.py  example.py
mser-tracking-paper/: main.tex
mser_2d/: MSER.m  Object.m  ObjectCollection.m  bothManualMeasurementGroups.csv  firstManualMeasurementGroup.csv  main.m  mserMeasurements.csv  secondManualMeasurementGroup.csv
mser_3d/: ._.idea  ._CMakeCache.txt  ._CMakeFiles  ._CMakeLists.txt  ._build  ._wrap  CMakeLists.txt  CTestTestfile.cmake  CameraPoints.h  CameraPoints_.h  Frame.cpp  Frame.h  InputManager.cpp  InputManager.h  Makefile  MserMeasurement.h  MserMeasurementColor.cpp  MserMeasurementColor.h  MserObject.h  MserTrack.h  PointsPose.h  Tracker.cpp  Tracker.h  TripleManifold.h  Visualizer.cpp  Visualizer.h  WorldPoints.h  alexFunctions.h  cmake_install.cmake  geometryFunctions.cpp  geometryFunctions.h  levMarErrors.m  main.cpp  measurementFunction.cpp  measurementFunction.h  mserClasses.h  msmtModeling.m  oldTests.cpp  oldTests.h  optimization.cpp  (+12 more)
mser_3d/common/: controls.cpp  texture.cpp
mser_alex/: MSER.m  Region.m  RegionSet.m  alex01_mser.m  alex02_mser.m  alex03_mser.m  alex04_mser.m  alex05_mser.m  alex07_mser.m  alex08_mser_tracking.m  alex09_projection.m  alex09_projection_prototype.m  alex10_crude_tracking.m  alex11_ransac_tracking.m  alex12_mser_objects.m  basicGUI.fig  basicGUI.m  compareRegionEllipses.m  frame.m  frank01_mser.m  generateMatches.m  matchEllipses.m  object.m  objectData.m  objectFarm.m  track.m  videoOutput.m  worldObject.m
mser_donoser/: alex05_donoser_mser.m  build_component_tree.m  c_tree.m  mser_find.m  mser_make_set.m  mser_merge.m  mser_node.m
mser_nister/: .gitignore  CMakeLists.txt  alex06_mser.cpp  generate_script  generate_simulator_script  nister.sh  nister_calibrate.sh  nister_ellipses.txt  nister_mser_pipeline.sh  nister_video.sh  shell_script_for_simulator_generator.cpp  shell_script_generator.cpp
mser_nister/jpeg-8d/: Makefile  cjpeg  config.status  djpeg  jpegtran  libtool  rdjpgcom  wrjpgcom
mser_nister/jpeg-8d/.deps/: cdjpeg.Po  cjpeg.Po  djpeg.Po  jaricom.Plo  jcapimin.Plo  jcapistd.Plo  jcarith.Plo  jccoefct.Plo  jccolor.Plo  jcdctmgr.Plo  jchuff.Plo  jcinit.Plo  jcmainct.Plo  jcmarker.Plo  jcmaster.Plo  jcomapi.Plo  jcparam.Plo  jcprepct.Plo  jcsample.Plo  jctrans.Plo  jdapimin.Plo  jdapistd.Plo  jdarith.Plo  jdatadst.Plo  jdatasrc.Plo  jdcoefct.Plo  jdcolor.Plo  jddctmgr.Plo  jdhuff.Plo  jdinput.Plo  jdmainct.Plo  jdmarker.Plo  jdmaster.Plo  jdmerge.Plo  jdpostct.Plo  jdsample.Plo  jdtrans.Plo  jerror.Plo  jfdctflt.Plo  jfdctfst.Plo  (+25 more)
mser_nister/jpeg-8d/.libs/: cjpeg  djpeg  jpegtran  libjpeg.8.dylib
mser_tests/: compare_ellipses.m  compare_ellipses_2.m  compare_mser_functions.m  compare_sequence_mser.m  make_ellipses.m  reference_sequence_mser.m  reference_single_mser.m
